--- a/src/app/pages/public/course/course.component.html
+++ b/src/app/pages/public/course/course.component.html
@@ -77,7 +77,7 @@
           <!-- Course Image -->
           <div class="aspect-video relative bg-gray-100">
             <img 
-              [src]="course.thumbnailURL ? 'https://localhost:7032' + course.thumbnailURL : '/assets/images/default-course.jpg'" 
+              [src]="course.thumbnailURL ? 'https://wq5w12lw-7032.inc1.devtunnels.ms' + course.thumbnailURL : '/assets/images/default-course.jpg'" 
               [alt]="course.title"
               class="object-cover w-full h-full">
             <span class="absolute top-2 right-2 bg-blue-500 text-white px-2 py-1 rounded text-sm">
