--- a/src/app/pages/public/signup-form/signup-form.component.html
+++ b/src/app/pages/public/signup-form/signup-form.component.html
@@ -69,8 +69,8 @@
           [ngClass]="{'border-red-500': signupForm.get('role')?.touched && signupForm.get('role')?.invalid}"
         >
           <option value="">Select your role</option>
-          <option value="learner">Learner</option>
-          <option value="instructor">Instructor</option>
+          <option value="Learner">Learner</option>
+          <option value="Instructor">Instructor</option>
         </select>
       </div>
 
