--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -76,7 +76,7 @@
                 <td class="px-6 py-4">
                   <div class="flex items-center">
                     @if (course.thumbnailURL) {
-                      <img [src]="course.thumbnailURL" class="h-10 w-10 rounded-md object-cover mr-3">
+                      <img [src]="'https://wq5w12lw-7032.inc1.devtunnels.ms'+course.thumbnailURL" class="h-10 w-10 rounded-md object-cover mr-3">
                     }
                     <div>
                       <div class="font-medium text-gray-900">{{course.title}}</div>
